tests/org.eclipse.php.core.tests/workspace/errors/php56/invalidVariadicParamOrder01.pdtt
--TEST--
Test Variadic parameter not at the end
--FILE--
<?php function foo(...$lala, $plum) {} ?>
--EXPECT--
[line=1, start=19, end=27] Only the last parameter can be variadic